# soehyb

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
c++/triqs_soehyb/: CMakeLists.txt  backbone.cpp  backbone.hpp  block_sparse.cpp  block_sparse.hpp  block_sparse_backbone.cpp  block_sparse_backbone.hpp  block_sparse_manual.cpp  block_sparse_manual.hpp  dense_backbone.cpp  dense_backbone.hpp  dlr_dyson_ppsc.hpp  impurity.cpp  impurity.hpp  impurity_desc.py  strong_cpl.cpp  strong_cpl.hpp  timer.hpp  timestamp.hpp  triqs_soehyb.cpp  triqs_soehyb.hpp  (+2 more)
doc/: CMakeLists.txt  ChangeLog.md  about.rst  conf.py.in
packaging/: CMakeLists.txt  TRIQS-triqs_soehyb-foss-2021b.eb.in
python/: dimer.py  dimer_final.py  threebanddmft.py  twoband.py  twoband_discrete.py
test/: test_convolve.cpp  test_dimer.cpp  test_dlr.cpp  test_gregory.cpp  test_impurity.cpp  test_oca.cpp  test_oca_equi.cpp
test/c++/: CMakeLists.txt  basic.cpp  block_sparse_utils.cpp  block_sparse_utils.hpp  compare_OCA.cpp  test_block_sparse.cpp  test_block_sparse_NCA_manual.cpp  test_block_sparse_OCA_manual.cpp  test_block_sparse_backbone_eval.cpp  test_block_sparse_matmul.cpp  test_block_sparse_misc.cpp  test_convolve.cpp  test_dense_backbone_eval.cpp  test_dimer.cpp  test_dlr.cpp  test_gregory.cpp  test_impurity.cpp  test_oca.cpp  test_oca_equi.cpp  test_tca.cpp  third_order.cpp  tpz_vs_python.cpp  twoband.cpp
test/c++/block_sparse/: block_sparse_NCA.cpp  block_sparse_OCA.cpp
test/c++/h5/: spin_flip_fermion.h5  spin_flip_fermion_all_sym.h5  tpz100.h5  two_band_ad.h5  two_band_py.h5  two_band_py_Lambda10.h5  two_band_py_Lambda10_copy.h5
(+41 files in other folders)
